--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=sistema_pagos
+sonar.projectKey=a01722728_2
 sonar.sources=.
 sonar.tests=tests
 sonar.exclusions=**/tests/**,**/*.json,**/Dockerfile,**/requirements*.txt,**/.github/**
